--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,17 @@ body {
   scroll-behavior: smooth;
 }
 
+
 .scroll-container::-webkit-scrollbar {
-  width: 0;
+  display: none;
+}
+
+.scroll-container {
+  height: 100vh;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
 }
 
 /* ROOT */
